--- a/.github/workflows/publish-app.yml
+++ b/.github/workflows/publish-app.yml
@@ -30,17 +30,17 @@ jobs:
           # - host: windows-latest
           #   target: aarch64-pc-windows-msvc
           # - host: ubuntu-20.04
-          #   target: x86_64-unknown-linux-gnu
-          #   bundles: deb,appimage
-          #   os: linux
-          #   arch: x86_64
-          # - host: ubuntu-20.04
-          #   target: x86_64-unknown-linux-musl
-          # - host: ubuntu-20.04
-          #   target: aarch64-unknown-linux-gnu
-          #   bundles: deb # no appimage for now unfortunetly
-          # - host: ubuntu-20.04
-          #   target: aarch64-unknown-linux-musl
+            target: x86_64-unknown-linux-gnu
+            bundles: deb,appimage
+            os: linux
+            arch: x86_64
+          - host: ubuntu-20.04
+            target: x86_64-unknown-linux-musl
+          - host: ubuntu-20.04
+            target: aarch64-unknown-linux-gnu
+            bundles: deb # no appimage for now unfortunetly
+          - host: ubuntu-20.04
+            target: aarch64-unknown-linux-musl
     runs-on: 
       - harana-dev-linux
       - ${{ matrix.settings.arch }}      
