--- a/.github/workflows/publish-app.yml
+++ b/.github/workflows/publish-app.yml
@@ -29,18 +29,21 @@ jobs:
           #   arch: x86_64
           # - host: windows-latest
           #   target: aarch64-pc-windows-msvc
-          # - host: ubuntu-20.04
+          - host: ubuntu-20.04
             target: x86_64-unknown-linux-gnu
             bundles: deb,appimage
             os: linux
             arch: x86_64
           - host: ubuntu-20.04
             target: x86_64-unknown-linux-musl
+            arch: x86_64
           - host: ubuntu-20.04
             target: aarch64-unknown-linux-gnu
             bundles: deb # no appimage for now unfortunetly
+            arch: x86_64
           - host: ubuntu-20.04
             target: aarch64-unknown-linux-musl
+            arch: x86_64
     runs-on: 
       - harana-dev-linux
       - ${{ matrix.settings.arch }}      
