--- a/.github/workflows/publish-app.yml
+++ b/.github/workflows/publish-app.yml
@@ -15,7 +15,7 @@ jobs:
           - runner: harana-dev-mac
             target: x86_64-apple-darwin
             bundles: app,dmg
-          - host: harana-dev-mac
+          - runner: harana-dev-mac
             target: aarch64-apple-darwin
             bundles: app,dmg
           # - host: windows-latest
@@ -31,7 +31,7 @@ jobs:
           - runner: harana-dev-linux
             target: aarch64-unknown-linux-gnu
             bundles: deb
-    runs-on: ${{ matrix.settings.runner }}      
+    runs-on: ${{ matrix.settings.runner }}
     steps:
       - name: Checkout
         uses: actions/checkout@v2
