--- a/.github/workflows/publish-app.yml
+++ b/.github/workflows/publish-app.yml
@@ -78,8 +78,8 @@ jobs:
         if: ${{ runner.os == 'Linux' }}
         run: |
           dpkg -l | grep i386
-          sudo apt-get purge --allow-remove-essential libc6-i386 ".*:i386"
-          sudo dpkg --remove-architecture i386
+          apt-get purge --allow-remove-essential libc6-i386 ".*:i386"
+          dpkg --remove-architecture i386
 
       - name: Cache Rust Dependencies
         uses: Swatinem/rust-cache@v2
