🔄 synced local '.github/workflows/publish-tauri-app.yml' with remote 'templates/publish-tauri-app.yml'

--- a/.github/workflows/publish-tauri-app.yml
+++ b/.github/workflows/publish-tauri-app.yml
@@ -107,7 +107,7 @@ jobs:
       - name: Build Frontend
         env:
           GITHUB_TOKEN: ${{ secrets.WRITE_PACKAGES_TOKEN }}
-        run: sbt publish
+        run: sbt buildFrontend
 
       - name: Build Tauri
         run: |
