--- a/.github/workflows/publish-tauri-app.yml
+++ b/.github/workflows/publish-tauri-app.yml
@@ -34,7 +34,7 @@ jobs:
     runs-on: ${{ matrix.settings.runner }}
     steps:
       - name: Checkout
-        uses: actions/checkout@v2
+        uses: actions/checkout@v4
 
       # Todo: Make generic checkout
       - name: Checkout search engine repo
@@ -42,6 +42,7 @@ jobs:
         with:
           repository: harana/search-engine
           path: search engine
+          token: ${{ secrets.READ_REPOSITORIES_TOKEN }}
 
       - name: Get Branch/Tag
         id: ref
