🔄 synced local '.github/workflows/publish-tauri-app.yml' with remote 'templates/publish-tauri-app.yml'

--- a/.github/workflows/publish-tauri-app.yml
+++ b/.github/workflows/publish-tauri-app.yml
@@ -41,7 +41,7 @@ jobs:
         uses: actions/checkout@v4
         with:
           repository: harana/search-engine
-          path: search engine
+          path: search-engine
           token: ${{ secrets.READ_REPOSITORIES_TOKEN }}
 
       - name: Get Branch/Tag
