🔄 synced local '.github/workflows/publish-search-app.yml' with remote 'templates/publish-search-app.yml'

--- a/.github/workflows/publish-search-app.yml
+++ b/.github/workflows/publish-search-app.yml
@@ -69,16 +69,18 @@ jobs:
 
       - name: Setup Cache
         run: |
-          mkdir -p /opt/cache/cargo_cache
+          mkdir -p /opt/cache/cargo_git_cache
+          mkdir -p /opt/cache/cargo_registry_cache
           mkdir -p /opt/cache/coursier_cache
           mkdir -p /opt/cache/ivy2_cache
           mkdir -p /opt/cache/sbt_cache
-          rm -fr /home/runner/.cache ; mkdir /home/runner/.cache
-          rm -fr /home/runner/.cargo ; mkdir /home/runner/.cargo
-          rm -fr /home/runner/.ivy2 ; mkdir /home/runner/.ivy2
-          rm -fr /home/runner/.sbt ; mkdir /home/runner/.sbt
+          rm -fr /home/runner/.cache/*
+          rm -fr /home/runner/.cargo/*
+          rm -fr /home/runner/.ivy2/*
+          rm -fr /home/runner/.sbt/*
           rm -fr /opt/cache/coursier_cache/v1/https/maven.pkg.github.com/harana
-          ln -s /opt/cache/cargo_cache /home/runner/.cargo/registry
+          ln -s /opt/cache/cargo_git_cache /home/runner/.cargo/git
+          ln -s /opt/cache/cargo_registry_cache /home/runner/.cargo/registry
           ln -s /opt/cache/coursier_cache /home/runner/.cache/coursier
           ln -s /opt/cache/ivy2_cache /home/runner/.ivy2/cache
           ln -s /opt/cache/sbt_cache /home/runner/.sbt/boot
