--- a/.github/workflows/publish-search-app.yml
+++ b/.github/workflows/publish-search-app.yml
@@ -33,6 +33,10 @@ jobs:
           #   bundles: deb
     runs-on: ${{ matrix.settings.runner }}
     steps:
+      - name: Env
+        run: |
+          env
+
       - name: Checkout
         uses: actions/checkout@v4
         with:
