--- a/.github/workflows/publish-search-app.yml
+++ b/.github/workflows/publish-search-app.yml
@@ -125,8 +125,8 @@ jobs:
 
       - name: Build Conan Libraries
         run: |
-          cd search
-          conan install . --build missing
+          cd search-engine
+          conan install --build=missing -of=build -d=full_deploy .
 
       - name: Build Tauri
         run: |
