--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -55,9 +55,12 @@ tracing = { version = "0.1.40", features = [] }
 tracing-appender = "0.2"
 tracing-subscriber = "0.3.18"
 tokio = { version = "1", features = [] }
-tokio-cron-scheduler = "0.9"
+tokio-cron-scheduler = "0.10"
 window-vibrancy = "0.4"
 zune-image = "0.4"
+
+[target.'cfg(target_os = "linux")'.dependencies]
+zbus = "3.15.0"
 
 [target.'cfg(target_os = "macos")'.dependencies]
 core-graphics = {version = "0.23.1" }
@@ -70,9 +73,6 @@ objc-foundation = { version = "0.1.1" }
 screencapturekit = { git = "https://github.com/harana-oss/screencapturekit-rs" }
 screencapturekit-sys = { git = "https://github.com/harana-oss/screencapturekit-rs" }
 swift-rs = { git = "https://github.com/Brendonovich/swift-rs.git", branch = "autorelease" }
-
-[patch.crates-io]
-nix = { version = "0.27.1", features = ["user"] }
 
 #[patch.crates-io]
 #rusty_ffmpeg = { git = "https://github.com/harana-oss/rusty_ffmpeg.git" }
