--- a/.github/workflows/publish-search-app.yml
+++ b/.github/workflows/publish-search-app.yml
@@ -17,7 +17,7 @@ jobs:
             bundles: app,dmg
             os: darwin
             arch: x86_64
-          - runner: harana-dev-mac
+          - runner: harana-dev-macstudio
             target: aarch64-apple-darwin
             bundles: app,dmg
             os: darwin
