--- a/.github/workflows/publish-search-app.yml
+++ b/.github/workflows/publish-search-app.yml
@@ -85,11 +85,11 @@ jobs:
           mkdir -p ~/.ivy2
           mkdir -p ~/.sbt
           rm -fr /opt/cache/coursier_cache/v1/https/maven.pkg.github.com/harana
-          ln -s /opt/cache/cargo_git_cache /home/runner/.cargo/git
-          ln -s /opt/cache/cargo_registry_cache /home/runner/.cargo/registry
-          ln -s /opt/cache/coursier_cache /home/runner/.cache/coursier
-          ln -s /opt/cache/ivy2_cache /home/runner/.ivy2/cache
-          ln -s /opt/cache/sbt_cache /home/runner/.sbt/boot
+          ln -s /opt/cache/cargo_git_cache $HOME/.cargo/git
+          ln -s /opt/cache/cargo_registry_cache $HOME/.cargo/registry
+          ln -s /opt/cache/coursier_cache $HOME/.cache/coursier
+          ln -s /opt/cache/ivy2_cache $HOME/.ivy2/cache
+          ln -s /opt/cache/sbt_cache $HOME/.sbt/boot
 
       - name: Install Apple API key
         if: ${{ runner.os == 'macOS' }}
@@ -109,10 +109,10 @@ jobs:
 
       - name: Populate Credentials
         run: |
-          mkdir -p /home/runner/.sbt/1.0/plugins
+          mkdir -p $HOME/.sbt/1.0/plugins
 
-          if [ ! -f '/home/runner/.sbt/1.0/plugins/credentials.sbt' ]; then
-            cat <<EOF > /home/runner/.sbt/1.0/plugins/credentials.sbt
+          if [ ! -f '$HOME/.sbt/1.0/plugins/credentials.sbt' ]; then
+            cat <<EOF > $HOME/.sbt/1.0/plugins/credentials.sbt
             credentials += Credentials("GitHub Package Registry", "maven.pkg.github.com", "nadenf", System.getenv("GITHUB_TOKEN"))
           EOF
           fi
@@ -153,7 +153,7 @@ jobs:
           APPLE_SIGNING_IDENTITY: ${{ secrets.APPLE_SIGNING_IDENTITY }}
           APPLE_PROVIDER_SHORT_NAME: ${{ secrets.APPLE_PROVIDER_SHORT_NAME }}
           ENABLE_CODE_SIGNING: ${{ secrets.APPLE_PRIVATE_KEY }}
-          FFMPEG_DIR: "/home/runner/.conan2/p/ffmped949aea9d58a1/p"
+          FFMPEG_DIR: "$HOME/.conan2/p/ffmped949aea9d58a1/p"
           NODE_OPTIONS: "--max_old_space_size=8196"
           SENTRY_AUTH_TOKEN: ${{ secrets.SENTRY_AUTH_TOKEN }}
           TAURI_KEY_PASSWORD: ${{ secrets.TAURI_KEY_PASSWORD }}
