--- a/.github/workflows/publish-search-app.yml
+++ b/.github/workflows/publish-search-app.yml
@@ -133,7 +133,7 @@ jobs:
         run: |
           cd search-engine
           cargo update
-          conan profile detect
+          conan profile detect || true
           conan install --build=missing -of=build -d=full_deploy .
 
       - name: Build Tauri
