--- a/.github/workflows/publish-search-app.yml
+++ b/.github/workflows/publish-search-app.yml
@@ -140,11 +140,12 @@ jobs:
         run: |
           source /etc/profile
           cd search
-          mkdir -p dist
-          pnpm run css
-          cd src-tauri
-          cargo update
-          pnpm tauri build --ci -v --target ${{ matrix.settings.target }} --bundles ${{ matrix.settings.bundles }},updater
+          echo $FFMPEG_DIR
+          # mkdir -p dist
+          # pnpm run css
+          # cd src-tauri
+          # cargo update
+          # pnpm tauri build --ci -v --target ${{ matrix.settings.target }} --bundles ${{ matrix.settings.bundles }},updater
         env:      
           APPLE_API_ISSUER: ${{ secrets.APPLE_API_ISSUER }}
           APPLE_API_KEY: ${{ secrets.APPLE_API_KEY }}
