--- a/.github/workflows/publish-search-app.yml
+++ b/.github/workflows/publish-search-app.yml
@@ -84,12 +84,6 @@ jobs:
           mkdir -p ~/.cargo
           mkdir -p ~/.ivy2
           mkdir -p ~/.sbt
-          rm -fr /opt/cache/coursier_cache/v1/https/maven.pkg.github.com/harana
-          ln -s /opt/cache/cargo_git_cache $HOME/.cargo/git || true
-          ln -s /opt/cache/cargo_registry_cache $HOME/.cargo/registry || true
-          ln -s /opt/cache/coursier_cache $HOME/.cache/coursier || true
-          ln -s /opt/cache/ivy2_cache $HOME/.ivy2/cache || true
-          ln -s /opt/cache/sbt_cache $HOME/.sbt/boot || true
 
       - name: Install Apple API key
         if: ${{ runner.os == 'macOS' }}
@@ -123,11 +117,13 @@ jobs:
           pnpm install
 
       - name: Build Frontend
-        env:
-          GITHUB_TOKEN: ${{ secrets.WRITE_PACKAGES_TOKEN }}
         run: |
           cd search
           sbt buildFrontend
+        env:
+          COURSIER_HOME: /opt/cache
+          GITHUB_TOKEN: ${{ secrets.WRITE_PACKAGES_TOKEN }}
+          IVY_HOME: /opt/cache
 
       - name: Build Conan Libraries
         run: |
@@ -135,6 +131,8 @@ jobs:
           cargo update
           conan profile detect || true
           conan install --build=missing --build=ffmpeg/6.1 -of=build -d=full_deploy .
+        env:
+          CONAN_USER_HOME: /opt/cache
 
       - name: Build Tauri
         run: |
@@ -152,8 +150,9 @@ jobs:
           APPLE_API_KEY: ${{ secrets.APPLE_API_KEY_ID }}
           APPLE_CERTIFICATE: ${{ secrets.APPLE_CERTIFICATE }}
           APPLE_CERTIFICATE_PASSWORD: ${{ secrets.APPLE_CERTIFICATE_PASSWORD }}
-          APPLE_SIGNING_IDENTITY: ${{ secrets.APPLE_SIGNING_IDENTITY }}
+          APPLE_SIGNING_IDENTITY: ${{ secrets.APPLE_SIGNING_IDENTITY }} 
           APPLE_PROVIDER_SHORT_NAME: ${{ secrets.APPLE_PROVIDER_SHORT_NAME }}
+          CARGO_HOME: /opt/cache
           ENABLE_CODE_SIGNING: ${{ secrets.APPLE_CERTIFICATE }}
           NODE_OPTIONS: "--max_old_space_size=8196"
           SENTRY_AUTH_TOKEN: ${{ secrets.SENTRY_AUTH_TOKEN }}
