--- a/.github/workflows/publish-search-app.yml
+++ b/.github/workflows/publish-search-app.yml
@@ -109,6 +109,9 @@ jobs:
           rm -fr $COURSIER_HOME/v1/https/maven.pkg.github.com/harana
           cd search
           sbt \
+          -ivy $IVY_HOME \
+          -Dsbt.boot.directory=$SBT_HOME \
+          -Dsbt.global.base=$SBT_HOME \
           -Dsbt.coursier.home=$COURSIER_HOME \
           -Dsbt.ivy.home=$IVY_HOME \
           -Divy.home=$IVY_HOME \
@@ -117,6 +120,7 @@ jobs:
           COURSIER_HOME: /opt/cache/coursier
           GITHUB_TOKEN: ${{ secrets.WRITE_PACKAGES_TOKEN }}
           IVY_HOME: /opt/cache/ivy2
+          SBT_HOME: /opt/cache/sbt
 
       - name: Build Conan Libraries
         run: |
