--- a/.github/workflows/publish-search-app.yml
+++ b/.github/workflows/publish-search-app.yml
@@ -10,7 +10,6 @@ env:
   CARGO_HOME: /opt/cache/cargo
   CONAN_HOME: /opt/cache/conan
   COURSIER_HOME: /opt/cache/coursier
-  GITHUB_TOKEN: ${{ secrets.WRITE_PACKAGES_TOKEN }}
   IVY_HOME: /opt/cache/ivy2
   SBT_HOME: /opt/cache/sbt
 
@@ -106,6 +105,9 @@ jobs:
             credentials += Credentials("GitHub Package Registry", "maven.pkg.github.com", "nadenf", System.getenv("GITHUB_TOKEN"))
           EOF
           fi
+        env:
+          GITHUB_TOKEN: ${{ secrets.WRITE_PACKAGES_TOKEN }}
+
 
       - name: Install Frontend Dependencies
         run: |
