--- a/.github/workflows/publish-search-app.yml
+++ b/.github/workflows/publish-search-app.yml
@@ -120,12 +120,12 @@ jobs:
           rm -fr $COURSIER_HOME/v1/https/maven.pkg.github.com/harana
           cd search
           sbt \
-          -ivy $IVY_HOME \
+          -Divy.home=$IVY_HOME \
           -Dsbt.boot.directory=$SBT_HOME/boot \
           -Dsbt.coursier.home=$COURSIER_HOME \
-          -Dsbt.global.base=$SBT_HOME \
+          -Dsbt.global.base=$SBT_HOME/1.0 \
           -Dsbt.ivy.home=$IVY_HOME \
-          -Divy.home=$IVY_HOME \
+          -Dsbt.repository.config=$SBT_HOME/repositories \
           buildFrontend
 
       - name: Build Conan Libraries
